# pytim

./: .gitattributes  .gitconfig  .hound.yml  .oldcodecov.yml  .travis.yml  .travis.yml.  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  ChaconTarazona.html  GITIM.html  ITIM.html  PULL_REQUEST_TEMPLATE.md  README.md  README.rst  SASA.html  SimpleInterface.html  Tutorials.html  WillardChandler.html  appveyor.yml  center.html  conf.py  datafiles.html  environment.yml  features.html  genindex.html  guessing_radii.html  index.html  index.rst  install.html  itim.py  micelle.html  newproperties.html  objects.inv  observables-1.py  observables-2.py  observables-3.py  observables-4.py  observables.html  observables.py  (+14 more)
.circleci/: config.yml
.github/workflows/: python-package.yml  (+2 more)
_modules/: _weakrefset.html  abc.html  index.html
_sources/: GITIM.rst.txt  ITIM.rst.txt  Tutorials.rst.txt  datafiles.rst.txt  features.rst.txt  guessing_radii.rst.txt  index.rst.txt  install.rst.txt  micelle.rst.txt  newproperties.rst.txt  observables.rst.txt
_static/: classic.css
docs/: Makefile  README  mytest.py
files/: README.rst  WATERSMALL.LONG.TRR.MD5  WATERSMALL.TRR.MD5  ccl4-h2o.mid.xtc.md5  ccl4-h2o.short.xtc  ccl4-h2o.short.xtc.md5
images/: README.txt
notebooks/: Hello World! .ipynb  Time Correlations.ipynb  Willard-Chandler and Cube format.ipynb
pytim/: Interface.py  __init__.py  _dbscan_inner.cpp  _dbscan_inner.pyx  atoms_maps.py  chacon_tarazona.py  circumradius.pyx  correlator.py  cube.py  cythonUtilities.pyx  datafiles.py  free_volume.py  gaussian_kde_pbc.py  gitim.py  gtools.pyx  interface.py  itim.py  messages.py  observables.py  patches.py  pdb.py  profile.py  properties.py  quasiTriangulation.py  rdf.py  sanity_check.py  sasa.py  simple_interface.py  surface.py  usti.py  utilities.py  utilities_dbscan.py  utilities_geometry.py  utilities_mesh.py  utilities_pbc.py  utilities_usti.py  vtk.py  wavefront_obj.py  wc.py  willard_chandler.py
(+105 files in other folders)
